--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=Big5">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
   </head>
   <body>
     <h1>Hello World</h1>
