--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
     <ul>
-      <li><a href="0101501/index.html">¹Bºâ«äºû·§­z</a>
+      <li><a href="0101501/index.html">é‹ç®—æ€ç¶­æ¦‚è¿°</a>
       </li>
     </ul>
   </body>
