--- a/0101501/index.html
+++ b/0101501/index.html
@@ -6,7 +6,7 @@
     <meta content="" name="description">
     <meta content="" name="author">
     <link href="../shared/img/favicon.ico" rel="shortcut icon">
-    <title> [麻記附中] 微分方程 </title>
+    <title> [麻記附中] 運算思維概述 </title>
     <!-- CSS -->
     <link href="../shared/css/bootstrap.min.css" rel="stylesheet">
     <link href="../shared/css/bootstrap-theme.min.css" rel="stylesheet">
